# fcc-router-consumer-awareness

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PUSH_TO_GITHUB.md  README.md  SECURITY.md  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  rollback.yml  validate-db.yml
app/: __init__.py  api.py  config.py  db.py  logging.py  models.py  sqlite_api.py  tracing.py
data/: fcc_router_consumer_awareness.db  fcc_router_consumer_awareness.sql
docs/: architecture.md  database_README.md  operability.md  source-caveats.md
docs/adr/: 001-static-site-architecture.md
docs/runbooks/: deployment.md  disaster-recovery.md  incident-response.md  load-testing.md  release-upgrade.md  rollback.md  slos-alerts.md
docs/superpowers/plans/: 2026-07-09-static-website-shell.md  2026-07-10-production-readiness-phase1.md  2026-07-10-production-readiness-phase2.md  2026-07-10-production-readiness-phase2b.md  2026-07-10-production-readiness-phase3.md  2026-07-10-production-readiness-phase4.md  2026-07-10-production-readiness-phase5.md  2026-07-10-production-readiness-phase6.md
docs/superpowers/specs/: 2026-07-09-static-website-shell-design.md  2026-07-10-production-readiness-design.md
examples/: queries.sql
migrations/: 0001_baseline.sql
scripts/: __init__.py  backup_db.py  build_html.py  build_site.py  export_site_json.py  migrate.py  models.py  restore_db.py  validate_db.py
site/static/: search.js  style.css
site/templates/: approvals.html  base.html  faqs.html  myths.html  search.html  sources.html  status.html  timeline.html  waivers.html
tests/: __init__.py  test_api.py  test_backup_db.py  test_build.py  test_e2e.py  test_export.py  test_integration_workflow.py  test_migrate.py  test_models.py  test_restore_db.py  test_site.py  test_sqlite_api.py  test_validate_db.py
