[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "fcc-router-consumer-awareness"
version = "0.1.0"
description = "SQLite-backed data package and consumer-awareness website for FCC router Covered List actions."
readme = "README.md"
license = { text = "CC0-1.0" }
requires-python = ">=3.10"
authors = [
    { name = "FCC Router Consumer Awareness Contributors" },
]
keywords = ["fcc", "router", "consumer-awareness", "sqlite", "static-site"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.111.0,<1",
    "uvicorn[standard]>=0.30.0,<1",
    "gunicorn>=22.0,<23",
    "prometheus-fastapi-instrumentator>=7.0.0,<9",
    "pydantic-settings>=2.3.0,<3",
    "slowapi>=0.1.9,<1",
    "structlog>=24.1.0,<27",
    "httpx>=0.27.0,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0,<1",
    "mypy>=1.10.0,<3",
    "pytest>=8.2.0,<10",
    "pytest-cov>=5.0.0,<7",
    "pre-commit>=3.7.0,<5",
    "pip-audit>=2.7.0,<3",
    "locust>=2.29.0,<3",
    "setuptools>=78.1.1",
]

[project.urls]
Homepage = "https://github.com/bmsull560/fcc-router-consumer-awareness"
Repository = "https://github.com/bmsull560/fcc-router-consumer-awareness"
Issues = "https://github.com/bmsull560/fcc-router-consumer-awareness/issues"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".github",
    "__pycache__",
    ".venv",
    "venv",
    "site",
    "site-data",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "\\.git",
    "__pycache__",
    "\\.venv",
    "venv",
    "site",
    "site-data",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--cov=app",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["app", "scripts"]
omit = [
    "site/*",
    "site-data/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
